[ADDED] PAge of search result with styles, begin pdp page

--- a/styles/css/desktop/components/Header/header-main/vtex.store-components.css
+++ b/styles/css/desktop/components/Header/header-main/vtex.store-components.css
@@ -7,6 +7,10 @@
     /* background-color: aquamarine; */
 }
 
+/* .searchBarContainer :global(.vtex-input-prefix__group){
+ border-radius: 50px;
+} */
+
 .imageElement--grid__image{
     border-radius: 6px;
     height: 100%;
