--- a/styles/css/desktop/components/Product Detail Page/vtex.flex-layout.css
+++ b/styles/css/desktop/components/Product Detail Page/vtex.flex-layout.css
@@ -1,5 +1,5 @@
 .flexRow--desktop__pdp--layout{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     width: 1170px;
     margin: auto;
 }
